--- a/index.html
+++ b/index.html
@@ -563,9 +563,9 @@
 						<div class="footer-right">
 							<ul class="footer-links-soi">
 								<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="#"><i class="fa fa-github"></i></a></li>
+								<!--<li><a href="#"><i class="fa fa-github"></i></a></li>-->
 								<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-								<li><a href="#"><i class="fa fa-dribbble"></i></a></li>
+								<!--<li><a href="#"><i class="fa fa-dribbble"></i></a></li>-->
 								<li><a href="#"><i class="fa fa-pinterest"></i></a></li>
 							</ul><!-- end links -->
 						</div>						
